--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ h1 {
         <h1>My website is still in development!</h1>
         <p>The page might look weird on your device and will probably have many bugs.</p>
         <a href="/index_v2.html">I want to visit anyway :)</a>
-        <a href="/artwork.html">I wanna see the art porfolio</a>
+        <!-- <a href="/artwork.html">I wanna see the art porfolio</a> -->
 
         <canvas id="canvas"></canvas>
     </section>
